# worki-service

./: .env.example  .gitignore  Makefile  config.py  db.py  docker-compose.yaml  hwfiwhfi.txt  main.py  pyproject.toml  req.txt
link/: api.py  models.py  schemas.py
nginx/templates/: default.conf.template
user/: api.py  models.py  schemas.py  security.py  services.py
worki_backend/: Dockerfile  app.py  config.py  db.py
worki_backend/link/: models.py
worki_backend/user/: api.py  depends.py  models.py  security.py
