[tool.poetry]
name = "worki"
version = "0.1.0"
description = ""
authors = ["Mikita-Arsi <ardonnik@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
ormar = "^0.20.1"
uvicorn = "^0.30.1"
hypercorn = "^0.17.3"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
